--- a/style/main.css
+++ b/style/main.css
@@ -6,3 +6,45 @@ body {
 #map {
   width: 100%; height: 100%;
 }
+
+.timeline {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 50px;
+  width: 80%;
+  height: 60px;
+  margin: auto;
+  background: white;
+}
+
+.axis {
+  font: 10px sans-serif;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
+.axis .domain {
+  fill: none;
+  stroke: #000;
+  stroke-opacity: .3;
+  stroke-width: 10px;
+  stroke-linecap: round;
+}
+
+.axis .halo {
+  fill: none;
+  stroke: #ddd;
+  stroke-width: 8px;
+  stroke-linecap: round;
+}
+
+.slider .handle {
+  fill: #fff;
+  stroke: #000;
+  stroke-opacity: .5;
+  stroke-width: 1.25px;
+  pointer-events: none;
+}-rendering: crispEdges;
+}
