--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,6 @@
 html,
 body {
- width: 100%; 
- height: 100%;
- padding: 0;
- margin: 0;
-}
-
-#holder{
-    min-height: 100%;
-    position:relative;
-}
-
-#content {
-  height: 100%;
+ width: 100%; height: 100%;
 }
 
 #map {
